--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   --line-color-red: #F54932;
   --text-color-gray: #595653;
   --text-color-dark: #313131;
-
+  --text-color-white: #ffffff;
 }
 
 body {
@@ -18,6 +18,13 @@ body {
   font-style: normal;
 }
 
+/* .golos-text-<uniquifier> {
+  font-family: "Golos Text", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
+
 .container {
   max-width: 375px;
   margin: 0 auto;
@@ -25,22 +32,93 @@ body {
 }
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
 
+.header-logo {
+  padding-top: 18px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .header-logo__link {
-  display: block;
-  padding-left: 40px;
-  position: relative;
+  display: inline-block;
+  font-size: 14.5px;
 }
 
-.header-logo__link::before {
-  content: '';
-  position: absolute;
+.header-logo__icon {
+  display: inline-block;
   width: 80px;
-  height: 27px;
+  height: 28px;
   background-image: url('./../resourses/icons/logo-horse.svg');
+  background-repeat: repeat-x;
+  background-size: 20px 27px;
 }
 
 /* section hero */
 
+.hero {
+  background-image: url('./../resourses/img/1.webp');
+  width: 375px;
+  height: 812px;
+  margin: 0 auto;
+}
+
+.hero-wrapper {
+  padding-top: 90px;
+  position: relative;
+}
+
+.hero-title {
+  font-size: 36px;
+  margin-bottom: 24px;
+}
+
+.hero-title__center {
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-35%);
+}
+
+.hero-title__right {
+  position: relative;
+  right: -25px;
+}
+
+.hero-text {
+  font-family: "Golos Text", sans-serif;
+  font-size: 18px;
+  line-height: 130%;
+  margin-bottom: 32px;
+}
+
+.hero-btns {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.hero-btn {
+  text-align: center;
+  display: block;
+  font-family: "Golos Text", sans-serif;
+  line-height: 70%;
+  width: 100%;
+  padding: 18px 0;
+  border-radius: 66px;
+}
+
+.hero-btn__support {
+  color: var(--text-color-white);
+  background-color: var(--btn-color-black);
+}
+
+.hero-btn__about {
+  color: var(--btn-color-black);
+  background-color: rgba(255, 255, 255, 0.9);
+}
