--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ body {
   padding: 0 20px;
 }
 
+/* .container-background {
+  background-image: ;
+} */
+
 .header {
   position: fixed;
   top: 0;
